[project]
name = "WILCZY_PAJAK"
version = "6.66"
description = ""
authors = [
  { name = "rafixks", email = "rafixks@interia.pl" }
]

[tool.poetry.dependencies]
python = "^3.8"

requests = "*"
beautifulsoup4 = "*"
lxml = "*"
scrapy = "*"
shodan = "*"
theHarvester = "*"
python-nmap = "*"
Foca = "*"
pytrends = "*"
python-whois = "*"
censys = "*"
dnsdumpster = "*"
pytesseract = "*"
"pdfminer.six" = "*"
tweepy = "*"
geopy = "*"
radar = "*"
ipwhois = "*"
exifread = "*"
canary = "^0.1.4"
cherrypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
